# IntuneDeviceDatabaseSynchronization

./: .env.example  Cargo.toml  Dockerfile  README.md  build-cross-platform.ps1  build.bat  build.ps1  build.rs  config.json  docker-entrypoint.sh  invalid-config.json  mock-test-config.json  release.ps1  release_notes.md  test-config.json
docs/: BUILD.md  CONFIGURATION.md  CONFIG_VALIDATION.md  ENDPOINTS.md  INSTALLATION.md  MOCK_API.md  RATE_LIMITING.md  SERVICE_MANAGEMENT.md  TROUBLESHOOTING.md
docs/monitoring/: MONITORING.md  grafana-dashboard.json
release/MSGraphDBSynchronizer-v2.0.0-windows/: VERSION.txt
release/MSGraphDBSynchronizer-v2.0.0-windows-x64/: VERSION.txt
release/MSGraphDBSynchronizer-v2025.06.06.0204-windows-x64/: VERSION.txt
src/: auth.rs  backup.rs  config.rs  config_validator.rs  endpoint.rs  filter.rs  fingerprint.rs  logging.rs  main.rs  metrics.rs  mock_graph_api.rs  path_utils.rs  rate_limiter.rs  service_manager.rs  sync.rs  uuid_utils.rs  version.rs  webhook.rs
src/storage/: mod.rs  mssql.rs  postgres.rs  sqlite.rs
